--- a/templates/credit_notes/view.html
+++ b/templates/credit_notes/view.html
@@ -50,6 +50,7 @@
 
         <div class="card">
             <div class="card-body p-0">
+                <div class="table-responsive">
                 <table class="table mb-0">
                     <thead>
                         <tr>
@@ -88,6 +89,7 @@
                         </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
         </div>
     </div>
