--- a/templates/reports/vendor_statement.html
+++ b/templates/reports/vendor_statement.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="card mb-3">
+<div class="card mb-3 filter-bar">
     <div class="card-body py-2">
         <form method="GET" class="row g-2 align-items-end">
             <div class="col-12 col-sm-3">
@@ -60,8 +60,8 @@
                 <tr>
                     <th>Date</th>
                     <th>Type</th>
-                    <th>Reference</th>
-                    <th>Description</th>
+                    <th class="d-table-cell-lg">Reference</th>
+                    <th class="d-table-cell-lg">Description</th>
                     <th class="text-end">Charges</th>
                     <th class="text-end">Payments</th>
                     <th class="text-end">Balance</th>
@@ -69,15 +69,19 @@
             </thead>
             <tbody>
                 <tr class="table-light">
-                    <td colspan="6"><strong>Opening Balance</strong></td>
+                    <td colspan="2"><strong>Opening Balance</strong></td>
+                    <td class="d-table-cell-lg"></td>
+                    <td class="d-table-cell-lg"></td>
+                    <td></td>
+                    <td></td>
                     <td class="text-end amount"><strong>{{ currency_symbol }}{{ "{:,.2f}".format(opening_balance) }}</strong></td>
                 </tr>
                 {% for t in transactions %}
                 <tr>
                     <td>{{ t.date.strftime('%b %d, %Y') }}</td>
                     <td><span class="badge bg-{{ 'warning text-dark' if t.type == 'Bill' else 'success' }}">{{ t.type }}</span></td>
-                    <td>{{ t.reference }}</td>
-                    <td>{{ t.description }}</td>
+                    <td class="d-table-cell-lg">{{ t.reference }}</td>
+                    <td class="d-table-cell-lg">{{ t.description }}</td>
                     <td class="text-end amount">{{ currency_symbol ~ "{:,.2f}".format(t.debit) if t.debit else '' }}</td>
                     <td class="text-end amount">{{ currency_symbol ~ "{:,.2f}".format(t.credit) if t.credit else '' }}</td>
                     <td class="text-end amount">{{ currency_symbol }}{{ "{:,.2f}".format(t.balance) }}</td>
@@ -86,7 +90,11 @@
             </tbody>
             <tfoot>
                 <tr class="grand-total">
-                    <td colspan="6"><strong>Closing Balance</strong></td>
+                    <td colspan="2"><strong>Closing Balance</strong></td>
+                    <td class="d-table-cell-lg"></td>
+                    <td class="d-table-cell-lg"></td>
+                    <td></td>
+                    <td></td>
                     <td class="text-end amount"><strong>{{ currency_symbol }}{{ "{:,.2f}".format(closing_balance) }}</strong></td>
                 </tr>
             </tfoot>
